--- a/client/index.html
+++ b/client/index.html
@@ -15,21 +15,23 @@
       <main>
         <div id="score">
           <h2>best score is :</h2>
+          <button>start Game</button>
         </div>
         <div id="bourd">
-          <div class="one cell">1</div>
-          <div class="two cell">2</div>
-          <div class="three cell">3</div>
-          <div class="four cell">4</div>
-          <div class="five cell">5</div>
-          <div class="six cell">6</div>
-          <div class="seven cell">7</div>
-          <div class="eight cell">8</div>
-          <div class="nine cell">9</div>
+          <div class="one cell"></div>
+          <div class="two cell"></div>
+          <div class="three cell"></div>
+          <div class="four cell"></div>
+          <div class="five cell"></div>
+          <div class="six cell"></div>
+          <div class="seven cell"></div>
+          <div class="eight cell"></div>
+          <div class="nine cell"></div>
         </div>
-        <button>new match</button>
+        <button id="rematch">new match</button>
       </main>
       <footer><h1>@Markos-Malek</h1></footer>
     </div>
+    <script src="./app.js"></script>
   </body>
 </html>
