--- a/client/index.html
+++ b/client/index.html
@@ -12,11 +12,11 @@
       <header>
         <h1>Wellcome</h1>
       </header>
+      <div id="score">
+        <h2>Best score is :</h2>
+        <button>start Game</button>
+      </div>
       <main>
-        <div id="score">
-          <h2>best score is :</h2>
-          <button>start Game</button>
-        </div>
         <div id="bourd">
           <div class="one cell"></div>
           <div class="two cell"></div>
@@ -28,9 +28,11 @@
           <div class="eight cell"></div>
           <div class="nine cell"></div>
         </div>
-        <button id="rematch">new match</button>
       </main>
-      <footer><h1>@Markos-Malek</h1></footer>
+      <footer>
+        <p>@Markos-Malek</p>
+        <button id="rematch">new match</button>
+      </footer>
     </div>
     <script src="./app.js"></script>
   </body>
