initialize game +resetGame

--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,7 @@
       </div>
       <main>
         <div>
-          <p id="turn">Choose A player</p>
+          <p id="turn">It's "X" turn</p>
         </div>
         <div id="bourd">
           <div class="one cell"></div>
